force-app/main/default/objects/Milestone_Spec__c/Milestone_Spec__c.object-meta.xml
<CustomObject>
    <description>Specification of a milestone including type, date due, etc.</description>
    <label>Milestone Spec</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Milestone Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>