force-app/main/default/objects/Milestone_Spec__c/fields/Custom_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reqs__c</fullName>
    <description>The custom reporting reqs record for this milestone spec record</description>
    <inlineHelpText>The custom reporting reqs record for this milestone spec record</inlineHelpText>
    <label>Custom Reqs</label>
    <referenceTo>Custom_Reqs__c</referenceTo>
    <relationshipLabel>Milestone Specs</relationshipLabel>
    <relationshipName>Milestone_Specs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>