force-app/main/default/objects/Milestone_Spec__c/fields/Date_due__c.field-meta.xml
<CustomField>
    <fullName>Date_due__c</fullName>
    <description>Due date for milestone
Note: Overrides Num months due</description>
    <inlineHelpText>Due date for milestone
Note: Overrides Num months due</inlineHelpText>
    <label>Date due</label>
    <type>Date</type>
</CustomField>