force-app/main/default/objects/Milestone_Spec__c/fields/Fraction_of_amount_awarded__c.field-meta.xml
<CustomField>
    <fullName>Fraction_of_amount_awarded__c</fullName>
    <description>The fraction of the proposal&apos;s amount awarded to be paid according to this (payment) milestone spec</description>
    <inlineHelpText>The fraction of the proposal&apos;s amount awarded to be paid according to this (payment) milestone spec</inlineHelpText>
    <label>Fraction of amount awarded</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>