force-app/main/default/objects/Milestone_Spec__c/fields/Num_months_due__c.field-meta.xml
<CustomField>
    <fullName>Num_months_due__c</fullName>
    <description>The number of months after the date awarded on which the milestone is due</description>
    <inlineHelpText>The number of months after the date awarded on which the milestone is due</inlineHelpText>
    <label>Num months due</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>