force-app/main/default/objects/Milestone_Spec__c/fields/Review_form__c.field-meta.xml
<CustomField>
    <fullName>Review_form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The review form used for milestones linked to this milestone spec</description>
    <inlineHelpText>The review form used for milestones linked to this milestone spec</inlineHelpText>
    <label>Review form</label>
    <referenceTo>Review_Form__c</referenceTo>
    <relationshipLabel>Milestone Specs</relationshipLabel>
    <relationshipName>Milestone_Specs</relationshipName>
    <type>Lookup</type>
</CustomField>