force-app/main/default/objects/Milestone_Spec__c/fields/Time_sensitive_donor_report__c.field-meta.xml
<CustomField>
    <fullName>Time_sensitive_donor_report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is a time sensitive donor report that depends on this milestone</description>
    <inlineHelpText>Checked if there is a time sensitive donor report that depends on this milestone</inlineHelpText>
    <label>Time sensitive donor report</label>
    <type>Checkbox</type>
</CustomField>