force-app/main/default/objects/Milestone_Spec__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of this milestone</description>
    <inlineHelpText>The type of this milestone</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Milestone_type</valueSetName>
    </valueSet>
</CustomField>