force-app/main/default/objects/Milestone_Spec__c/validationRules/DateDueOrNumMonthsDue.validationRule-meta.xml
<ValidationRule>
    <fullName>DateDueOrNumMonthsDue</fullName>
    <active>true</active>
    <description>One of Date Due or Num Months Due must be non-blank.</description>
    <errorConditionFormula>AND(
 ISBLANK( Date_due__c ),
 ISBLANK( Num_months_due__c )
)</errorConditionFormula>
    <errorMessage>One of Date Due or Num Months Due must be non-blank.</errorMessage>
</ValidationRule>