force-app/main/default/objects/Milestone_Spec__c/validationRules/FractionRequiredForPaymentMilestoneSpec.validationRule-meta.xml
<ValidationRule>
    <fullName>FractionRequiredForPaymentMilestoneSpec</fullName>
    <active>true</active>
    <description>Payment milestone specs must have non-blank Fraction of Amount Awarded</description>
    <errorConditionFormula>AND(
 TEXT(Type__c) = &quot;Payment&quot;,
 ISBLANK(Fraction_of_amount_awarded__c)
)</errorConditionFormula>
    <errorDisplayField>Fraction_of_amount_awarded__c</errorDisplayField>
    <errorMessage>Payment milestone specs must have non-blank Fraction of Amount Awarded</errorMessage>
</ValidationRule>