force-app/main/default/objects/Milestone_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Custom_Reqs__c</columns>
    <columns>Type__c</columns>
    <columns>Date_due__c</columns>
    <columns>Num_months_due__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>